Fixes in data and rerun

--- a/notebooks/02_bigram_lm_linear_nn.ipynb
+++ b/notebooks/02_bigram_lm_linear_nn.ipynb
@@ -16,7 +16,6 @@
    "cell_type": "markdown",
    "id": "5fc1f96d-f7a6-41b2-9c3c-67b39a3bf2a6",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -104,13 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "eb6d95d1-17ab-49af-8aeb-3579cc0829ee",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -199,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "64217acb-152e-446f-9262-0928513041da",
    "metadata": {},
    "outputs": [
@@ -212,7 +207,7 @@
        "        20,  6, 21, 21, 10, 15,  8, 20])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "dc396f75-f88a-4f6a-8c2b-c246fa2ec93e",
    "metadata": {},
    "outputs": [
@@ -236,7 +231,7 @@
        "         6, 21, 21, 10, 15,  8, 20,  0])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "31b80485-5161-475e-9650-e8a7b4bdadb5",
    "metadata": {
     "tags": []
@@ -264,10 +259,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbe63d33bb0>"
+       "<matplotlib.image.AxesImage at 0x7f56b9d2ae50>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -297,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f97d47bb-b786-4992-b8f9-442673f13faa",
    "metadata": {},
    "outputs": [
@@ -307,7 +302,7 @@
        "torch.Size([62, 55])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "737d4a30-5b23-465b-896a-1f115af8c6ea",
    "metadata": {},
    "outputs": [],
@@ -337,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "64755a0c-5c84-4304-8733-edb8fdf3ea4d",
    "metadata": {},
    "outputs": [
@@ -353,7 +348,7 @@
        "        [0.0048, 0.0077, 0.0425,  ..., 0.0393, 0.0173, 0.0207]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,13 +363,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "b7dbedb4-5446-475e-b311-4a243bad0386",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -1093,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "1cb3f7aa-637f-4e9d-8c9d-a83a809667af",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1097,7 @@
        "        20,  6, 21, 21, 10, 15,  8, 20])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "5a38586c-35ba-4c98-8ca1-8d0268d9916c",
    "metadata": {},
    "outputs": [
@@ -1130,7 +1121,7 @@
        "         6, 21, 21, 10, 15,  8, 20,  0])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "cb005121-1df7-4f81-9f83-407adf9cf370",
    "metadata": {},
    "outputs": [],
@@ -1162,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "3659b768-7bc6-4132-884b-4a76b0ce8c45",
    "metadata": {},
    "outputs": [
@@ -1170,7 +1161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss: 3.7265\n"
+      "Loss: 3.7180\n"
      ]
     }
    ],
@@ -1189,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "5818e9f7-cb98-4998-bda2-84956f7c98fc",
    "metadata": {},
    "outputs": [],
@@ -1212,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "cc7e5e20-bf1c-43e8-a3bf-8fb82a06e2f2",
    "metadata": {},
    "outputs": [],
@@ -1223,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "43ab3554-8b43-4e56-831b-23027f2f713e",
    "metadata": {},
    "outputs": [
@@ -1231,7 +1222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of examples: 1147295\n"
+      "Number of examples: 1143352\n"
      ]
     }
    ],
@@ -1265,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "30735fc3-1ae5-47c5-a198-b84b27cd6bc6",
    "metadata": {},
    "outputs": [
@@ -1273,8 +1264,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Loss: 2.4947\n",
-      "CPU times: user 16.7 s, sys: 15.3 s, total: 31.9 s\n",
+      "Final Loss: 2.4999\n",
+      "CPU times: user 16.5 s, sys: 15.5 s, total: 32 s\n",
       "Wall time: 32 s\n"
      ]
     }
@@ -1302,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "36a717da-6876-466e-b6ae-8795f1ef1924",
    "metadata": {},
    "outputs": [],
@@ -1312,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "id": "dfc87f88-2fa1-4f57-bb49-148652f079e1",
    "metadata": {},
    "outputs": [
@@ -1320,26 +1311,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sthag crifousesite hur anul angharmpetarincerarery upldicenet anctisu arco dizs ty spgo lm dakepp s s comen me ie iplanousceetolllemit me tas carndo be caimow gbe den bse s d m\n",
-      "fotasarthados b hay te h d fetownti andsintinancandn alelyoomph tar f cexweo p cefoalqurn tty dviecly klanas tistingre eershed s ine m d tacen itheeros urcofrik wsanduneratecang ca conns thed\n",
+      "sthag crifousesiteamur anul angharmpetarincerarery upldicenet anctisu arco dizs ty spgo lm dakepp s s comen me ie iplanousceetolllemit me tcola orer be caimow gd beng bse s d m\n",
+      "fotasboun cos b hay te h d fetownti andsintinancando alelyples as r f cexweo p cegid tern tty dviecly kn mas tistingre eershed s ine m d tacen ithefosqutilofrik wsanduneratecang ca conns thed\n",
       "ne med tiny us hintivesamapeabur forer\n",
       "bsiofed mid cr\n",
-      "hus caudy f ere fo s ditsidah upchroun hertysteyst ome\n",
+      "hus caudy f ere fo s ditsidbe upeetoun hertysteyst ome\n",
       "novils ws higatiniooy piry tidvio ha alonlstilleins\n",
       "bean\n",
-      "r gertoco ficreax llingedesapilica babin athebu panco d satws on on lsthatan t o e roued astetseriten at lo binie incofi re jingommamimds on atom e h eatstye\n",
-      "deathe pale in cp cistits id peshere tes ffow ewinofay miokmelichoph vese\n",
-      "pouchablod k jolepin ao pller ts meat heanary ppap t sunsat tay hontocryifoxtheveatowathemal s s fomintee\n",
-      "mifr s ointhed cheereve tirsal brkveprrgha sss s con pgopunshllifoin w woor thosople ther be ulo vinist taly flllan indes plyifo od mend selesning chan honth hathurecr uplesomusncathes\n",
-      "n pomuterer sokre s bash ge r inns tsple inortas ho terild stos m hineerenlif f rul d ibin tite s sque\n",
-      "couthash m il kze les jas lone d fl ustlere s ur covende is mefie ceet mhoyo thouplum famar whistookaracex asus hely\n",
+      "r gertoco ficreaxcionflinesapilica babin athect\n",
+      "panco d sctws on on lsthatan t o e roued astetseriten at lo binie incofi re jingommamimet on atom e h eatstye\n",
+      "deathe pale in cp cistits id pfrinon tes ffow ewinofay mioknelichopiaugon\n",
+      "pouchablod k jolepin ap pller ts mebuameanary ppap t sunsat tay hontodryifoxtheveatowathemal s s fomintee\n",
+      "mifr r ointhed cheereve tirthe\n",
+      "brly prrgha sss s con pgopunshkin s m w woor thosople therace ulo vinist taly flllan\n",
+      "ledes plyifo od mend selesning chan honth hathurecr uplesomusncathes\n",
+      "n pomuterer sokre s bash ge r inns tsple inortas ho terild stos m hineerenme alarul d ibin tite s sre acouthash mand jy ches jas lone dalictourere s ur covende is mefie ceet mhoyo thouplum famas whistookaracex asus hely\n",
       "loplize mis\n",
       "ndsly\n",
-      "ke en by s in re t\n",
-      "jkn cherlmesthain or s uleesouray tcow acndizeasthingenkeeaile\n",
-      "chetecevocequil coumadeag autar carkzed\n",
-      "in woushus trberore lalesiocaleram\n",
-      "st s pretre wal ngezas fid reaisinstone ceste tediserads lbon sofbas bamalitrsofe hldametho aarungrlaqutrs ben s g dilbl\n"
+      "ke eo by s in re t\n",
+      "jkn cherlngoun de or s uleesouray tdive bolly foupoplinkeeaile\n",
+      "chetecevocere f coumadeag autas carly h he woushus trcerorean fesiocaleram\n"
      ]
     }
    ],
