--- a/notebooks/02_bigram_lm_linear_nn.ipynb
+++ b/notebooks/02_bigram_lm_linear_nn.ipynb
@@ -106,6 +106,10 @@
    "execution_count": 5,
    "id": "eb6d95d1-17ab-49af-8aeb-3579cc0829ee",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -366,6 +370,10 @@
    "execution_count": 12,
    "id": "b7dbedb4-5446-475e-b311-4a243bad0386",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
