--- a/notebooks/word_level/01_bigram_lm_counts.ipynb
+++ b/notebooks/word_level/01_bigram_lm_counts.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from collections import Counter\n",
+    "from collections import Counter, defaultdict\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
@@ -190,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "study suggests onion social notifications three hundred times more satisfying to receive than facebook notifications\n"
+      "biden scales down two dollars trillion climate plan to single reusable grocery bag\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([0., 0., 0.,  ..., 0., 0., 0.])"
+       "tensor([0.0769, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000])"
       ]
      },
      "execution_count": 11,
@@ -355,7 +355,7 @@
     {
      "data": {
       "text/plain": [
-       "'would'"
+       "'the'"
       ]
      },
      "execution_count": 14,
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "8d94ab1e-6486-4daa-a3d2-ce5ebd8561db",
    "metadata": {},
    "outputs": [],
@@ -478,26 +478,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "id": "3c46e0d0-a51a-41f7-bda9-cefb0111481a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'trump goes to supreme court over mar a lago search and seizure of documents'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnn_headline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "ca3207dc-bcfa-4fab-a8fa-cebbcc7c57ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "log_likelihood=tensor(-inf)\n",
+      "nll=tensor(inf)\n",
+      "average nll inf\n"
+     ]
+    }
+   ],
    "source": [
     "log_likelihood = 0.\n",
     "n = 0\n",
     "for text in [cnn_headline]:\n",
     "  words = ['<s>'] + text.split() + ['<s>']\n",
     "  for word1, word2 in zip(words, words[1:]):\n",
-    "    if word1 not in stoi:\n",
-    "      idx1\n",
-    "    try:\n",
-    "      idx1 = stoi[word1]\n",
-    "      idx2 = stoi[word2]\n",
-    "    except KeyError:\n",
-    "      id\n",
+    "    if word1 not in vocab:\n",
+    "      word1 = '<s>'\n",
+    "    if word2 not in vocab:\n",
+    "      word2 = '<s>'\n",
+    "    idx1 = stoi[word1]\n",
+    "    idx2 = stoi[word2]\n",
     "    prob = bigram_probs[idx1, idx2]\n",
     "    logprob = torch.log(prob)\n",
     "    log_likelihood += logprob\n",
+    "    # print(f\"{ch1}{ch2}: {prob:0.4f} {logprob:0.4f}\")\n",
     "    n += 1\n",
     "\n",
     "print(f\"{log_likelihood=}\")\n",
