Working on word level mlp

--- a/notebooks/char_level/03_mlp.ipynb
+++ b/notebooks/char_level/03_mlp.ipynb
@@ -127,13 +127,12 @@
     "def split_datasets(X, Y, train_pct=0.8, dev_pct=0.1, device='cpu'):\n",
     "  X = X.to(device)\n",
     "  Y = Y.to(device)\n",
-    "  r = np.random.RandomState(2468975301)\n",
+    "  r = np.random.RandomState(seed)\n",
     "  idxs = np.arange(len(X))\n",
     "  r.shuffle(idxs) \n",
     "\n",
     "  n1 = int(train_pct*len(idxs))\n",
-    "  n2 = int((train_pct+dev_pct)*len(idxs))\n",
-    "  \n",
+    "  n2 = int((train_pct+dev_pct)*len(idxs))  \n",
     "\n",
     "  return X[idxs[:n1]],Y[idxs[:n1]],X[idxs[n1:n2]],Y[idxs[n1:n2]],X[idxs[n2:]],Y[idxs[n2:]]"
    ]
@@ -419,12 +418,13 @@
    "outputs": [],
    "source": [
     "block_size = 3 # contenxt length: how many characters do we take to predict the next character\n",
-    "emb_size = 10\n",
-    "hidden_dim = 300\n",
+    "emb_size = 2\n",
+    "hidden_dim = 100\n",
     "input_dim = block_size * emb_size\n",
-    "batch_size = 128\n",
+    "batch_size = 4096\n",
     "log_lossi = []\n",
-    "stepi = []"
+    "\n",
+    "X,Y = build_dataset(texts, stoi)"
    ]
   },
   {
@@ -434,36 +434,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = use_gpu(False)"
+    "device = use_gpu(True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a69d4129-db54-4993-82ff-cd0829ffb075",
+   "id": "e235cea7-687a-47ad-95a3-3e4b17a70ce9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X,Y = build_dataset(texts, stoi)\n",
-    "X_train,Y_train,X_dev,Y_dev,X_test,Y_test = split_datasets(X,Y, device=device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be76b7cc-002d-4622-85ef-6738495dd387",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g = torch.Generator(device=device).manual_seed(2468975301)\n",
+    "X_train,Y_train,X_dev,Y_dev,X_test,Y_test = split_datasets(X,Y, device=device)\n",
+    "\n",
+    "g = torch.Generator(device=device).manual_seed(seed)\n",
     "C = torch.randn(vocab_size, emb_size, generator=g, requires_grad=True, device=device)\n",
     "W1 = torch.randn(input_dim, hidden_dim, generator=g, requires_grad=True, device=device)\n",
     "b1 = torch.randn(hidden_dim, generator=g, requires_grad=True, device=device)\n",
     "W2 = torch.randn(hidden_dim, vocab_size, generator=g, requires_grad=True, device=device)\n",
     "b2 = torch.randn(vocab_size, generator=g, requires_grad=True, device=device)\n",
     "params = [C, W1, b1, W2, b2]\n",
+    "\n",
     "n_params = sum([p.nelement() for p in params])\n",
-    "print(f\"Number of params: {n_params}\")"
+    "print(f\"Number of params: {n_params}\")\n",
+    "print(f\"Training set size: {X_train.nelement()}\")\n",
+    "print(f\"Dev set size: {X_dev.nelement()}\")\n",
+    "print(f\"Test set size: {X_dev.nelement()}\")"
    ]
   },
   {
@@ -474,14 +469,16 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "for i in range(200_000):\n",
+    "for i in range(100000):\n",
     "  idx = torch.randint(0, len(X_train), (batch_size, ))\n",
     "  \n",
     "  # forward pass\n",
     "  emb = C[X_train[idx]]\n",
     "  h = torch.tanh(emb.view(-1, input_dim) @ W1 + b1) \n",
     "  logits = h @ W2 + b2\n",
-    "  loss = F.cross_entropy(logits, Y_train[idx])  \n",
+    "  loss = F.cross_entropy(logits, Y_train[idx])\n",
+    "  if i % 10000 == 0:\n",
+    "    print(f\"Iteration: {i}, Loss: {loss.item():0.4f}\")  \n",
     "\n",
     "  # backward pass\n",
     "  for p in params:\n",
@@ -489,11 +486,10 @@
     "  loss.backward()  \n",
     "  \n",
     "  # lr = 10**-1.4\n",
-    "  lr = 10**-0.8 if i < 100_000 else 10**-1.4\n",
+    "  lr = 10**-0.8 if i < 80000 else 10**-1.4\n",
     "  for p in params:\n",
     "    p.data += -lr * p.grad\n",
     "    \n",
-    "  stepi.append(i)\n",
     "  log_lossi.append(loss.log10().item())\n",
     "\n",
     "# print(f'Training Loss: {loss.item():0.4f}')"
@@ -502,18 +498,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21fc5f2e-bd53-4d2b-9abe-ac733dee7b3a",
+   "id": "b9b60cc4-b7cb-41ec-852f-ac09334f3ec3",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1,1,figsize=(10, 8))\n",
-    "ax.plot(stepi, log_lossi)"
+    "ax.plot(range(len(log_lossi)), log_lossi)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "961ca51c-24c1-4304-848c-a7f9609b894f",
+   "id": "f56f55e1-6b4a-46e3-b98a-f9e9f8b7e98f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train,Y_train,X_dev,Y_dev = X_train.cpu(),Y_train.cpu(),X_dev.cpu(),Y_dev.cpu()\n",
+    "C,W1,b1,W2,b2 = C.cpu(),W1.cpu(),b1.cpu(),W2.cpu(),b2.cpu()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56e049bb-1eec-46c5-9e31-d3110fd0704c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4695f6b3-c994-4e7b-8a19-a5e9a6726bc9",
+   "id": "b40d19a2-577d-4024-9691-ca5f96a5a254",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a13537-8060-4a3e-83cf-4c10f066db95",
+   "id": "bfc3ad4c-1e76-46ad-b05b-dcb29cea87e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +556,7 @@
     "  h = torch.tanh(emb.view(-1, input_dim) @ W1 + b1) \n",
     "  logits = h @ W2 + b2\n",
     "  loss = F.cross_entropy(logits, Y_test)  \n",
-    "  print(f'Dev Loss: {loss.item():0.4f}')"
+    "  print(f'Test Loss: {loss.item():0.4f}')"
    ]
   },
   {
@@ -593,7 +600,7 @@
    },
    "outputs": [],
    "source": [
-    "g = torch.Generator().manual_seed(2468975301)\n",
+    "g = torch.Generator().manual_seed(seed)\n",
     "n_headlines = 20\n",
     "for _ in range(n_headlines):  \n",
     "  ai_onion = []\n",
