--- a/notebooks/word_level/02_bigram_lm_linear_nn.ipynb
+++ b/notebooks/word_level/02_bigram_lm_linear_nn.ipynb
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "3659b768-7bc6-4132-884b-4a76b0ce8c45",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss: 10.1283\n"
+      "Loss: 10.1583\n"
      ]
     }
    ],
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "5818e9f7-cb98-4998-bda2-84956f7c98fc",
    "metadata": {},
    "outputs": [],
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "cc7e5e20-bf1c-43e8-a3bf-8fb82a06e2f2",
    "metadata": {},
    "outputs": [],
@@ -537,18 +537,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "43ab3554-8b43-4e56-831b-23027f2f713e",
+   "execution_count": 18,
+   "id": "6bdf9707-875f-4e9a-b3f9-722b07c48447",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of examples: 198755\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create the dataset\n",
     "xs,ys = [],[]\n",
@@ -566,7 +558,8 @@
     "\n",
     "# initialize the NN\n",
     "g = torch.Generator(device=device).manual_seed(seed)\n",
-    "W = torch.randn((vocab_size, vocab_size), generator=g, requires_grad=True, device=device)"
+    "W = torch.randn((vocab_size, vocab_size), generator=g, requires_grad=True, device=device)\n",
+    "print(f\"Number of params: {W.nelement()}\")"
    ]
   },
   {
@@ -579,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "6430c109-ad71-4224-a3c8-5c2e4c37c485",
    "metadata": {},
    "outputs": [],
@@ -589,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "30735fc3-1ae5-47c5-a198-b84b27cd6bc6",
    "metadata": {},
    "outputs": [
@@ -597,15 +590,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration: 0, Loss: 10.4698\n",
-      "Iteration: 1000, Loss: 5.2993\n",
-      "Iteration: 2000, Loss: 4.1362\n",
-      "Iteration: 3000, Loss: 3.8303\n",
-      "Iteration: 4000, Loss: 3.7763\n",
-      "Iteration: 5000, Loss: 3.7122\n",
-      "Final Loss: 3.5667\n",
-      "CPU times: user 1min 37s, sys: 2min 3s, total: 3min 41s\n",
-      "Wall time: 3min 41s\n"
+      "Iteration: 0, Loss: 10.4967\n",
+      "Iteration: 1000, Loss: 5.2694\n",
+      "Iteration: 2000, Loss: 4.1411\n",
+      "Iteration: 3000, Loss: 3.7667\n",
+      "Iteration: 4000, Loss: 3.6877\n",
+      "Iteration: 5000, Loss: 3.7473\n",
+      "Final Loss: 3.5082\n",
+      "CPU times: user 1min 55s, sys: 2min 21s, total: 4min 17s\n",
+      "Wall time: 4min 17s\n"
      ]
     }
    ],
@@ -638,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "36a717da-6876-466e-b6ae-8795f1ef1924",
    "metadata": {},
    "outputs": [],
@@ -648,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "69a9f585-2228-45a4-85d5-fbe3fa7103d2",
    "metadata": {},
    "outputs": [
@@ -657,45 +650,45 @@
      "output_type": "stream",
      "text": [
       "**************************************************\n",
-      "santa told me anything\n",
+      "republicans vote of childrens crusade\n",
       "**************************************************\n",
-      "annoying coworker up production of silly now shouts fistshaking meals that up hayseeds campaign encourages women so beautiful\n",
+      "climatologists secure funding bill maher spent twelve i wheels ranked number of dirty clothes without one\n",
       "**************************************************\n",
-      "nation wondering what\n",
+      "adam levines new forty eight am i never pretend like real news this guy with every passerby in on front of powerful blast of grief when youre driving wedge into objects\n",
       "**************************************************\n",
-      "blog its not really gnarly if theres something badass pilot informs guests know khmaio\n",
+      "patriots americas finest news impressive to clickholes athome dance\n",
       "**************************************************\n",
-      "fritolaysia cuts eu flag ban on world fortifies borders mlks family enters restaurant\n",
+      "ulta releases new york\n",
       "**************************************************\n",
-      "grinning mitch mcconnell shoves entire body hemingways dad veiled attack the words\n",
+      "alien lifeforms in storied career\n",
       "**************************************************\n",
-      "amazon pilot informs phillies dont expect sex with the capitol to wear masks outside pitcher just started acting like the capn crunch have blue light on string\n",
+      "psychiatrists sixday visit\n",
       "**************************************************\n",
-      "republicans call their first birthday southern border somehow not about jeopardy champ flunks geography test cramming\n",
+      "study three hundred dogs mounting over to be historys most americans dont know about nineeleven fifteenthanniversary coverage\n",
       "**************************************************\n",
-      "pope francis canonized martyr added to spawn of facebook is to release horrifying police rushing into negotiations with ukrainian crisis after motorcycles soul to church member not assault\n",
+      "reason his preserved body\n",
       "**************************************************\n",
-      "news safety dole reveals chase acquires bear\n",
+      "silicon valley just made a lucky cruise control mike pence condemns georgia teen newsweek editors killed osama bin ladens compound\n",
       "**************************************************\n",
-      "comiccon fan dies doing select sexiness of grief this high following decades of nothingness in appreciation spiral\n",
+      "justice stephen miller bands nude photo of loud fuck with appointment of martin burning through entire school curriculum just admitted that put lifeguarding job\n",
       "**************************************************\n",
-      "disastrous attempt to become accepting of <u> fancy magazine giving female president eats memories squeezes in class\n",
+      "california employees\n",
       "**************************************************\n",
-      "secret service failed by a good enough where ernie microwaves himself\n",
+      "chinese buffets origins fallon john welter look back if i am an honor subtember eleven\n",
       "**************************************************\n",
-      "i am and enjoy facebook group selfaware and without sleeper cars in\n",
+      "something he didnt realize how he completed mapping bluetooth cordless satellite into fascism peters gate jupiters liberals not as capn crunchs livein concubine on a gun averagelooking shredded concussion protocol to align with birthright to discontinue print edition out swearing solemnly recalls two thousand allcast dance fitness in toronto raptors from unguarded motherinlaw watching candidates emerge from complete lack of sign birthday\n",
       "**************************************************\n",
-      "article government\n",
+      "hentai message exonerating trump to man in the onion\n",
       "**************************************************\n",
-      "tucker carlson late to leave from everything in favor legalizing gay justification for an abuse allegations against knicks southerners dead in hell throw out\n",
+      "royal baby rabbit\n",
       "**************************************************\n",
-      "sean hannity informs black father\n",
+      "fbi agent <u> fisherprice releases top hat on by prisons\n",
       "**************************************************\n",
-      "demands more work way of prep a photo\n",
+      "crypto executives from shitting herself into toilet at pornographic images\n",
       "**************************************************\n",
-      "department approval on stage\n",
+      "scientist has urgent news closing staff slowly deflate throughout olympics now donate soul overuse of lesbian mother of dread makes pathetic nutritional supplement she is now to hulking two ice commercial is the onion americas finest news source\n",
       "**************************************************\n",
-      "heroic when its okay to be rescued from wifes birthday card with thing\n"
+      "lego indiana crib\n"
      ]
     }
    ],
