MLP not working good

--- a/notebooks/word_level/03_mlp.ipynb
+++ b/notebooks/word_level/03_mlp.ipynb
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24e9887d-e338-4666-83cc-84dd3fd08e3a",
+   "id": "48e5f1fb-b0f5-4d8b-86f3-24034768c212",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_dataset(texts, stoi, block_size=3):\n",
+    "def build_dataset(texts, stoi, block_size=3, device='cpu'):\n",
     "  X,Y = [],[]\n",
     "\n",
     "  for text in texts:\n",
@@ -186,7 +186,10 @@
   {
    "cell_type": "markdown",
    "id": "c0d2544e-98da-4ac9-bb15-46a5248ad5e3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Build the Dataset"
    ]
@@ -220,7 +223,10 @@
   {
    "cell_type": "markdown",
    "id": "0136f764-9a2e-4b66-bb1a-234b5e6b621f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Building the network"
    ]
@@ -469,56 +475,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e75b117e-1b7e-4060-b4b5-bb6e5314c816",
+   "id": "463eec65-53bd-4119-8d31-b9eec3a04781",
    "metadata": {},
    "outputs": [],
    "source": [
     "block_size = 3 # contenxt length: how many characters do we take to predict the next character\n",
-    "emb_size = 50\n",
-    "hidden_dim = 300\n",
+    "emb_size = 30\n",
+    "hidden_dim = 150\n",
     "input_dim = block_size * emb_size\n",
     "batch_size = 4096\n",
-    "log_lossi = []\n",
-    "\n",
+    "training_loss, dev_loss = [],[]\n",
     "X,Y = build_dataset(texts, stoi)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef8289d1-93ec-4253-87de-3fdb36e8bf05",
+   "id": "d619eace-d17c-47b4-a0d9-5ad7d50b0c16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = use_gpu(True)"
+    "device = use_gpu(True)\n",
+    "X_train,Y_train,X_dev,Y_dev,X_test,Y_test = split_datasets(X, Y, device=device)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e51f2a38-9b0e-4e64-b3cd-b7a85549a526",
+   "id": "a8bb806e-94a3-42e1-95c0-8dcf829360e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train,Y_train,X_dev,Y_dev,X_test,Y_test = split_datasets(X,Y, device=device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b7dd834-fcf9-4996-bd9e-9f7e28045e04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "lossi = []\n",
+    "lre = torch.linspace(-3, 1, 1000)\n",
+    "\n",
+    "first_run = True\n",
     "g = torch.Generator(device=device).manual_seed(seed)\n",
     "C = torch.randn(vocab_size, emb_size, generator=g, requires_grad=True, device=device)\n",
     "W1 = torch.randn(input_dim, hidden_dim, generator=g, requires_grad=True, device=device)\n",
     "b1 = torch.randn(hidden_dim, generator=g, requires_grad=True, device=device)\n",
     "W2 = torch.randn(hidden_dim, vocab_size, generator=g, requires_grad=True, device=device)\n",
-    "b2 = torch.randn(vocab_size, generator=g, requires_grad=True, device=device)\n",
-    "params = [C, W1, b1, W2, b2]\n",
-    "\n",
-    "n_params = sum([p.nelement() for p in params])\n",
+    "b2 = torch.randn(vocab_size, generator=g, requires_grad=True, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ec09c24-2b85-40b3-af49-2ed0d01bdb41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = [C,W1,b1,W2,b2]\n",
+    "n_params = sum([p.nelement() for p in  params])\n",
     "print(f\"Number of params: {n_params}\")\n",
     "print(f\"Training set size: {X_train.nelement()}\")\n",
     "print(f\"Dev set size: {X_dev.nelement()}\")\n",
@@ -528,50 +536,118 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff7dee13-ab95-4356-91c8-bf0d567b1586",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# lre = torch.linspace(-3, 1, 1000)\n",
-    "# lrs = 10**lre\n",
-    "\n",
-    "# lri = []\n",
-    "# lossi = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0c8d505-d13a-412f-8297-5b6e40c8fd78",
+   "id": "38e3d2a0-1b3d-4db6-9068-c2f5223cf7fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
+    "\n",
+    "if not first_run:\n",
+    "  X_train,Y_train,X_dev,Y_dev = X_train.to(device),Y_train.to(device),X_dev.to(device),Y_dev.to(device)\n",
+    "  C,W1,b1,W2,b2 = C.to(device),W1.to(device),b1.to(device),W2.to(device),b2.to(device)\n",
+    "  params = [C,W1,b1,W2,b2]\n",
+    "\n",
     "for i in range(1000):\n",
     "  idx = torch.randint(0, len(X_train), (batch_size, ))\n",
     "  \n",
     "  # forward pass\n",
     "  emb = C[X_train[idx]]\n",
     "  h = torch.tanh(emb.view(-1, input_dim) @ W1 + b1) \n",
-    "  logits = h @ W2 + b2\n",
-    "  loss = F.cross_entropy(logits, Y_train[idx])   \n",
-    "\n",
+    "  logits = h @ W2 + b2  \n",
+    "  loss = F.cross_entropy(logits, Y_train[idx])\n",
+    "  reg_term = 0.01 * ((W1**2).mean() + (W2**2).mean())\n",
+    "  loss += reg_term\n",
+    "  \n",
     "  # backward pass\n",
     "  for p in params:\n",
     "    p.grad = None\n",
     "  loss.backward()  \n",
-    "  \n",
-    "  lr = 10**0\n",
-    "  # lr = lrs[i]\n",
+    "  # lr = 10**lre[i]\n",
+    "  lr = 0.1\n",
     "  for p in params:\n",
     "    p.data += -lr * p.grad\n",
     "    \n",
-    "  # lri.append(lre[i])\n",
-    "  # lossi.append(loss.item())\n",
-    "      \n",
-    "  log_lossi.append(loss.log10().item())\n",
+    "  lossi.append(loss.item())\n",
     "\n",
-    "# print(f'Training Loss: {loss.item():0.4f}')"
+    "first_run = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f670b890-19fb-49ef-bc1f-2c2088d3e330",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1,1,figsize=(10, 8))\n",
+    "ax.plot(range(len(lossi)), torch.tensor(lossi))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3565bdc0-1cf2-450a-bb53-eacb8a01958c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train,Y_train,X_dev,Y_dev = X_train.cpu(),Y_train.cpu(),X_dev.cpu(),Y_dev.cpu()\n",
+    "params = [p.cpu() for p in params]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f943ab9b-6897-44b4-8d13-d1af02d73d99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_loss.append(np.round(calc_loss(X_train, Y_train, params, batch_size), 3))\n",
+    "dev_loss.append(np.round(calc_loss(X_dev, Y_dev, params, batch_size), 3))\n",
+    "print(f'Training Loss: {training_loss[-1]}')\n",
+    "print(f'Dev Loss: {dev_loss[-1]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef0bcf47-088c-4a97-a7f5-546d3b94092d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test,Y_test = X_test.cpu(),Y_test.cpu()\n",
+    "print(f'Test Loss: {np.round(calc_loss(X_test, Y_test, params, batch_size), 3)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2856391f-9ba5-48df-b34f-347498273cf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.lineplot(data=pd.DataFrame([training_loss, dev_loss], index=['Training', 'Dev']).T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a3d527b-41e3-426c-83f6-35cb7e9f67d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1,1,figsize=(10, 8))\n",
+    "ax.plot(lre, lossi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2500ddea-e30c-42e2-9e13-6f73c68a9a5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save([C.cpu(), W1.cpu(), b1.cpu(), W2.cpu(), b2.cpu()], f'{model_dir}/mlp.pt')\n",
+    "pickle.dump(log_lossi, open(f'{model_dir}/training_loss.pl', 'wb'))"
    ]
   },
   {
@@ -588,48 +664,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f670b890-19fb-49ef-bc1f-2c2088d3e330",
+   "id": "7ec98625-dcd5-4273-aeb6-6fea700cb01b",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1,1,figsize=(10, 8))\n",
     "ax.plot(range(len(log_lossi)), log_lossi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db44a9d7-2b78-431d-8005-fcffa34e9676",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fig, ax = plt.subplots(1,1,figsize=(10, 8))\n",
-    "# ax.plot(lri, lossi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f943ab9b-6897-44b4-8d13-d1af02d73d99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "training_loss = calc_loss(X_train, Y_train, params, batch_size)\n",
-    "dev_loss = calc_loss(X_dev, Y_dev, params, batch_size)\n",
-    "print(f'Training Loss: {training_loss:0.4f}')\n",
-    "print(f'Dev Loss: {dev_loss:0.4f}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2500ddea-e30c-42e2-9e13-6f73c68a9a5d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.save([C.cpu(), W1.cpu(), b1.cpu(), W2.cpu(), b2.cpu()], f'{model_dir}/mlp.pt')\n",
-    "pickle.dump(log_lossi, open(f'{model_dir}/training_loss.pl', 'wb'))"
    ]
   },
   {
@@ -697,9 +737,9 @@
     "    context = context[1:] + [idx]\n",
     "    ai_onion.append(itos[idx])\n",
     "    # if idx == 0 or len(ai_onion) > np.random.randint(50, 100):\n",
-    "    if idx == 0 or len(ai_onion):\n",
+    "    if idx == 0:\n",
     "      break\n",
-    "  print(''.join(ai_onion[:-1]))"
+    "  print(' '.join(ai_onion[:-1]))"
    ]
   }
  ],
